tous les diagrammes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,9 @@ services:
             - ./.docker/config/config_cron_path.php:/usr/local/apache2/cron/config_path.php:rw
             - ./.docker/config/config_error_path.php:/usr/local/apache2/error/config_path.php:rw
             - ./.docker/config/config_install_path.php:/usr/local/apache2/install/config_path.php:rw
-            - ./.docker/config/.htaccess:/usr/local/apache2/www/.htaccess:rw
+            - ./config/.htaccess:/usr/local/apache2/www/.htaccess:rw
+            - ./config/sgbd_connexion.php:/usr/local/apache2/www/back/sgbd_connexion.php:rw
+            - ./config/sgbd_connexion_new.php:/usr/local/apache2/www/back/sgbd_connexion_new.php:rw
             #- ./.docker/config/sgbd_config.php:/usr/local/apache2/www/config/sgbd_config.php:rw
             #- ./.docker/config/config.php:/usr/local/apache2/www/config/config.php:rw
             #- ./.docker/config/.env.local:/usr/local/apache2/www/.env.local:rw
