--- a/project/www/.gitignore
+++ b/project/www/.gitignore
@@ -3,3 +3,9 @@
 /forum/config.php
 /upload1
 /upload
+/data/config/config_def.ini
+/data/config/informations.json
+/data/upload
+/data/img
+/.htaccess
+/errors.log
