--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
             - ./config/.htaccess:/usr/local/apache2/www/.htaccess:rw
             - ./config/sgbd_connexion.php:/usr/local/apache2/www/back/sgbd_connexion.php:rw
             - ./config/sgbd_connexion_new.php:/usr/local/apache2/www/back/sgbd_connexion_new.php:rw
+            - ./config/config_def.ini:/usr/local/apache2/www/data/config/config_def.ini:rw
             #- ./.docker/config/sgbd_config.php:/usr/local/apache2/www/config/sgbd_config.php:rw
             #- ./.docker/config/config.php:/usr/local/apache2/www/config/config.php:rw
             #- ./.docker/config/.env.local:/usr/local/apache2/www/.env.local:rw
@@ -74,7 +75,8 @@ services:
             - ./.docker/mysql/mariadb.cnf:/etc/mysql/conf.d/mariadb.cnf:ro
             - ./.docker/sgbd_data/0000_phpmyadmin.sql:/docker-entrypoint-initdb.d/0000_phpmyadmin.sql
             # start sql
-            - ./.docker/sgbd_data/0001_damp.sql:/docker-entrypoint-initdb.d/0001_damp.sql
+            - ./config/0001_starcitizen_old.sql:/docker-entrypoint-initdb.d/0001_starcitizen_old.sql
+            - ./config/0002_starcitizen_new.sql:/docker-entrypoint-initdb.d/0002_starcitizen_new.sql
             # stop sql
         environment:
             - MYSQL_ROOT_PASSWORD=secret
